create BuhOne page with responsive design

--- a/1. HTML and CSS/Lesson-11/index.html
+++ b/1. HTML and CSS/Lesson-11/index.html
@@ -27,10 +27,27 @@
         <a href="#">Cases</a>
         <a href="#">About company</a>
         <a href="#">Contacts</a>
+        <a href="#">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            width="70"
+            height="70"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+            />
+          </svg>
+        </a>
       </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero-section">
       <div class="main-header">
         <h1>Accounting services in your city</h1>
         <button>Our presentation</button>
@@ -55,9 +72,8 @@
               fill="none"
             >
               <path
-                id="Vector"
                 d="M1.02713 7.4996L7.80139 0.725372C7.96799 0.558746 7.96799 0.291565 7.80139 0.124939C7.63477 -0.0416565 7.36758 -0.0416565 7.20099 0.124939L0.124939 7.20099C-0.0416565 7.36758 -0.0416565 7.63477 0.124939 7.80139L7.20099 14.8743C7.28271 14.956 7.39273 15 7.4996 15C7.60648 15 7.71652 14.9591 7.79825 14.8743C7.96484 14.7076 7.96484 14.4405 7.79825 14.2739L1.02713 7.4996Z"
-                fill="#FFFFFF"
+                fill="#ffffff"
                 fill-opacity="1.000000"
                 fill-rule="nonzero"
               />
@@ -74,7 +90,7 @@
             >
               <path
                 d="M6.89923 7.5004L0.125 14.2746C-0.041626 14.4413 -0.041626 14.7084 0.125 14.8751C0.291626 15.0417 0.558838 15.0417 0.725403 14.8751L7.80145 7.79901C7.96802 7.63242 7.96802 7.36523 7.80145 7.19861L0.725403 0.125732C0.643677 0.0440063 0.53363 0 0.426758 0C0.319885 0 0.2099 0.040863 0.128174 0.125732C-0.0384521 0.292358 -0.0384521 0.55954 0.128174 0.726135L6.89923 7.5004Z"
-                fill="#FFFFFF"
+                fill="#ffffff"
                 fill-opacity="1.000000"
                 fill-rule="nonzero"
               />
@@ -116,10 +132,253 @@
       </div>
     </section>
 
-    <section class="about-us"></section>
-    <section class="clients"></section>
-    <section class="testimonials"></section>
-    <section class="contacts"></section>
-    <footer></footer>
+    <section class="about-us">
+      <div class="about-company">
+        <h3>About us</h3>
+        <h2>
+          Company
+          <br />
+          <span>IvanovProm</span>
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ipsam beatae voluptas
+          cum odio praesentium, impedit ex delectus accusamus, cumque unde quasi quae minima.
+          Praesentium veniam maiores impedit vel beatae nostrum tenetur odio, similique
+          corrupti, obcaecati nesciunt deleniti voluptas totam labore molestiae? Ducimus
+          veritatis illo asperiores unde dolore placeat modi, doloribus ad ut suscipit. Dicta id
+          placeat ea molestiae temporibus.
+        </p>
+      </div>
+
+      <div class="company-cases">
+        <div class="cases">
+          <h3>90</h3>
+          <p>Major transactions completed.</p>
+          <a href="#">All cases</a>
+        </div>
+        <div class="cases">
+          <h3>90</h3>
+          <p>Major transactions completed.</p>
+          <a href="#">All cases</a>
+        </div>
+        <div class="cases">
+          <h3>90</h3>
+          <p>Major transactions completed.</p>
+          <a href="#">All cases</a>
+        </div>
+        <div class="cases">
+          <h3>90</h3>
+          <p>Major transactions completed.</p>
+          <a href="#">All cases</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="clients-section">
+      <div class="clients">
+        <h3>Our Clients</h3>
+        <h2>With us working</h2>
+        <div class="clients-list">
+          <img src="img/client.png" alt="Client" />
+          <img src="img/client.png" alt="Client" />
+          <img src="img/client.png" alt="Client" />
+          <img src="img/client.png" alt="Client" />
+        </div>
+
+        <div class="carousel">
+          <div class="carousel-nav">
+            <span></span>
+            <span></span>
+            <span class="active"></span>
+            <span></span>
+          </div>
+
+          <div class="carousel-btn">
+            <button class="previous">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="7.926331"
+                height="15.000000"
+                viewBox="0 0 7.92633 15"
+                fill="none"
+              >
+                <path
+                  d="M1.02713 7.4996L7.80139 0.725372C7.96799 0.558746 7.96799 0.291565 7.80139 0.124939C7.63477 -0.0416565 7.36758 -0.0416565 7.20099 0.124939L0.124939 7.20099C-0.0416565 7.36758 -0.0416565 7.63477 0.124939 7.80139L7.20099 14.8743C7.28271 14.956 7.39273 15 7.4996 15C7.60648 15 7.71652 14.9591 7.79825 14.8743C7.96484 14.7076 7.96484 14.4405 7.79825 14.2739L1.02713 7.4996Z"
+                  fill="#ffffff"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
+              </svg>
+            </button>
+            <button class="next">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="7.926392"
+                height="15.000000"
+                viewBox="0 0 7.92639 15"
+                fill="none"
+              >
+                <path
+                  d="M6.89923 7.5004L0.125 14.2746C-0.041626 14.4413 -0.041626 14.7084 0.125 14.8751C0.291626 15.0417 0.558838 15.0417 0.725403 14.8751L7.80145 7.79901C7.96802 7.63242 7.96802 7.36523 7.80145 7.19861L0.725403 0.125732C0.643677 0.0440063 0.53363 0 0.426758 0C0.319885 0 0.2099 0.040863 0.128174 0.125732C-0.0384521 0.292358 -0.0384521 0.55954 0.128174 0.726135L6.89923 7.5004Z"
+                  fill="#ffffff"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <article class="review-section">
+      <h3>Reviews</h3>
+      <h2>Your feedback</h2>
+      <div class="testimonial">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam maxime dignissimos
+          debitis. Nulla distinctio accusantium ex modi voluptate autem quos placeat praesentium
+          natus dicta molestiae ut fuga vero exercitationem nam voluptas neque tempore, rem
+          suscipit doloremque maxime hic eaque obcaecati! Molestiae repudiandae optio
+          reiciendis, assumenda itaque laudantium placeat ex, hic, quia vel non voluptate
+          incidunt autem nulla blanditiis? Labore, in similique impedit cumque mollitia, debitis
+          voluptatum autem veritatis eaque hic magni, ducimus voluptatem nostrum quasi!
+        </p>
+        <div class="customer">
+          <img src="img/customer.png" alt="Customer" />
+          <hgroup>
+            <h4>Ekaterina Ivanova</h4>
+            <p>Director of LLC “Raz-dva”</p>
+          </hgroup>
+        </div>
+      </div>
+
+      <div class="carousel">
+        <div class="carousel-nav">
+          <span></span>
+          <span></span>
+          <span class="active"></span>
+          <span></span>
+        </div>
+
+        <div class="carousel-btn">
+          <button class="previous">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="7.926331"
+              height="15.000000"
+              viewBox="0 0 7.92633 15"
+              fill="none"
+            >
+              <path
+                d="M1.02713 7.4996L7.80139 0.725372C7.96799 0.558746 7.96799 0.291565 7.80139 0.124939C7.63477 -0.0416565 7.36758 -0.0416565 7.20099 0.124939L0.124939 7.20099C-0.0416565 7.36758 -0.0416565 7.63477 0.124939 7.80139L7.20099 14.8743C7.28271 14.956 7.39273 15 7.4996 15C7.60648 15 7.71652 14.9591 7.79825 14.8743C7.96484 14.7076 7.96484 14.4405 7.79825 14.2739L1.02713 7.4996Z"
+                fill="#ffffff"
+                fill-opacity="1.000000"
+                fill-rule="nonzero"
+              />
+            </svg>
+          </button>
+          <button class="next">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="7.926392"
+              height="15.000000"
+              viewBox="0 0 7.92639 15"
+              fill="none"
+            >
+              <path
+                d="M6.89923 7.5004L0.125 14.2746C-0.041626 14.4413 -0.041626 14.7084 0.125 14.8751C0.291626 15.0417 0.558838 15.0417 0.725403 14.8751L7.80145 7.79901C7.96802 7.63242 7.96802 7.36523 7.80145 7.19861L0.725403 0.125732C0.643677 0.0440063 0.53363 0 0.426758 0C0.319885 0 0.2099 0.040863 0.128174 0.125732C-0.0384521 0.292358 -0.0384521 0.55954 0.128174 0.726135L6.89923 7.5004Z"
+                fill="#ffffff"
+                fill-opacity="1.000000"
+                fill-rule="nonzero"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </article>
+
+    <section class="contact-section">
+      <div class="contact">
+        <div class="contact-with-us">
+          <h2>Contact us</h2>
+          <p>Do you have any questions? Write us - we will answer soon!</p>
+
+          <div class="contact-methods">
+            <div class="phone">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="17.427429"
+                height="30.000000"
+                viewBox="0 0 17.4274 30"
+                fill="none"
+              >
+                <path
+                  d="M15.4011 0L2.02631 0C0.911987 0 0 0.911133 0 2.02637L0 27.9729C0 29.0879 0.911987 30 2.02631 30L15.4011 30C16.5154 30 17.4274 29.0896 17.4274 27.9736L17.4274 2.02637C17.4274 0.911133 16.5154 0 15.4011 0ZM6.57428 1.46069L10.8531 1.46069C10.9886 1.46069 11.0983 1.57031 11.0983 1.70654C11.0983 1.84204 10.9886 1.95166 10.8531 1.95166L6.57428 1.95166C6.43884 1.95166 6.32916 1.84204 6.32916 1.70654C6.32916 1.57031 6.43884 1.46069 6.57428 1.46069ZM8.71375 28.9868C8.15399 28.9868 7.70056 28.5334 7.70056 27.9729C7.70056 27.4124 8.15399 26.9597 8.71375 26.9597C9.27344 26.9597 9.72687 27.4124 9.72687 27.9729C9.72687 28.5334 9.27344 28.9868 8.71375 28.9868ZM16.0175 26.25L1.40997 26.25L1.40997 3.21338L16.0175 3.21338L16.0175 26.25Z"
+                  fill="#FFFFFF"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
+              </svg>
+              <p>+7 (111) 222-33-44</p>
+            </div>
+
+            <div class="email">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="39.420929"
+                height="30.000000"
+                viewBox="0 0 39.4209 30"
+                fill="none"
+              >
+                <rect width="39.420906" height="30.000000" fill="#FFFFFF" fill-opacity="0" />
+                <path
+                  d="M34.6085 0L4.82056 0C2.1615 0 0 2.16162 0 4.82056L0 25.1794C0 27.8384 2.1615 30 4.82056 30L34.6003 30C37.2594 30 39.4209 27.8384 39.4209 25.1794L39.4209 4.82861C39.429 2.16968 37.2675 0 34.6085 0ZM37.2267 25.1794C37.2267 26.623 36.0522 27.7976 34.6085 27.7976L4.82056 27.7976C3.37683 27.7976 2.20227 26.623 2.20227 25.1794L2.20227 4.82861C2.20227 3.38501 3.37683 2.21045 4.82056 2.21045L34.6003 2.21045C36.0441 2.21045 37.2186 3.38501 37.2186 4.82861L37.2186 25.1794L37.2267 25.1794Z"
+                  fill="#FFFFFF"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
+                <path
+                  d="M24.8613 14.7473L34.5024 6.10132C34.951 5.69336 34.9918 5 34.5839 4.54321C34.1761 4.09473 33.4828 4.05396 33.026 4.46167L19.7307 16.3948L17.137 14.0784C17.1288 14.0703 17.1206 14.062 17.1206 14.054C17.0635 13.9968 17.0064 13.9478 16.9412 13.8989L6.38654 4.45361C5.92978 4.04565 5.23645 4.08643 4.82864 4.54321C4.42081 5 4.46158 5.69336 4.91837 6.10132L14.6736 14.8206L4.95914 23.9153C4.51868 24.3313 4.4942 25.0247 4.91019 25.4731C5.13043 25.7017 5.42407 25.824 5.71771 25.824C5.98688 25.824 6.25604 25.7261 6.46811 25.5303L16.3294 16.3052L19.0048 18.6951C19.2169 18.8826 19.4779 18.9724 19.7389 18.9724C19.9999 18.9724 20.2691 18.8745 20.473 18.6868L23.2218 16.2236L33.026 25.5383C33.2381 25.7424 33.5154 25.8401 33.7846 25.8401C34.0782 25.8401 34.3637 25.7261 34.5839 25.4976C34.9999 25.0571 34.9836 24.3557 34.5432 23.9397L24.8613 14.7473Z"
+                  fill="#FFFFFF"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
+              </svg>
+              <p>order@bu-one.ru</p>
+            </div>
+          </div>
+        </div>
+
+        <form class="contact-form" onsubmit="event.preventDefault()">
+          <div class="form-label-group">
+            <label for="fname">First name</label>
+            <input id="fname" name="fname" placeholder="John" />
+          </div>
+          <div class="form-label-group">
+            <label for="lname">Last name</label>
+            <input id="lname" name="lname" placeholder="Smith" />
+          </div>
+          <div class="form-label-group textarea-group">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Your message"></textarea>
+          </div>
+          <button>Sent message</button>
+        </form>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footer-text">
+        <p>2019 &copy; All rights reversed. BuhOne.co</p>
+        <p>Developed: BuhOne</p>
+      </div>
+    </footer>
   </body>
 </html>
